<resources>
    <string name="app_name">MilkyWay</string>
    <string name="search">SEARCH</string>
    <string name="search_btn">To Search Page</string>
    <string name="select_your_interest">Select an interest:</string>
    <string name="choose_a_country">Choose a country</string>


    <string name="resultsTitle">Search Results for a Country</string>
    <string name="city">City</string>
    <string name="cost">Cost</string>
    <string name="image_of_the_city">Country Flag</string>
    <string name="resultsBack">Back to Search</string>
    <string name="favoriteButton">Save</string>

    <string-array name="search_options">
        <item>Bottle of Beer</item>
        <item>Bottle/Can of Coca-Cola</item>
        <item>Bottle of Water</item>
        <item>Bottle of Wine</item>
        <item>Cappuccino</item>
        <item>Cinema ticket, 1 Seat</item>
        <item>Eggs, 12 pack</item>
        <item>Gasoline, 1 liter</item>
        <item>Loaf of Fresh White Bread</item>
        <item>Local Cheese</item>
        <item>McMeal at McDonald\'s or Alternative Combo Meal</item>
        <item>Meal in inexpensive restaurant</item>
        <item>Rent for one bedroom apartment in city centre</item>
        <item>One-way Ticket, Local Transport</item>
        <item>Pack of Cigarettes</item>
        <item>Pair of Jeans</item>
        <item>Prepaid Mobile, price per 1 min, No Discounts or Plans</item>
        <item>Taxi, price for 1 hour Waiting</item>
    </string-array>

    <string name="profile">Profile</string>
    <string name="profile_description">Profile Details</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="favorites_list">Favorites list goes here</string>
    <string name="history_list">History list goes here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">imCHEAP</string>
    <string name="cityName">City Name</string>
    <string name="to_city_highlights_page">To City Highlights page</string>
    <string name="profileSearchButton">Search</string>
    <string name="title_activity_api_test">Api_test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="test">test</string>
    <string name="delete">Delete</string>
    <string name="load_message">Sit back and relax\nwhile we retrieve your results!</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="password_hint">Password</string>
    <string name="temp">Temperature: </string>
    <string name="fun_facts">Fun facts about this city:</string>
    <string name="select_to_view_5_day_forecast">Select to View 5 Day Forecast</string>
    <string name="fun_facts_loading_message">Loading some fun facts…</string>
    <string name="login_message">Logging you in…</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="profile_icon">profile icon</string>
    <string name="email_icon">email_icon</string>
    <string name="password_icon">password_icon</string>
    <string name="facts_failure_message">No facts found this time.\nTry again or check out another city!</string>


</resources>